<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_centerHorizontal="true"
    android:weightSum="3.6"
    android:layout_margin="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/course_name_input_layout"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:layout_gravity="center"
        android:hint="@string/course_name"
        android:layout_weight="3">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"

            android:id="@+id/course_name_editText"
            android:layout_height="match_parent"
             />
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/grade"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:layout_weight="0.4"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/grade_received_editText"
                android:inputType="textCapCharacters"
                android:maxLength="2"
                 />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/ch"
        android:layout_gravity="center"
        android:layout_margin="4dp"
            android:layout_weight="0.2"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/credit_hours_editText"
                android:inputType="number"
                android:maxLength="1"
                 />
        </com.google.android.material.textfield.TextInputLayout>





</LinearLayout>